# Glance

src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: builtin_translate.rs  commands.rs  llm_translate.rs  main.rs  models.rs  translate_engine.rs
ui/: app.js  capture.js  styles.css
