[package]
name = "glance"
version = "0.2.28"
edition = "2021"
description = "Quick screen capture & translation"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
hmac = "0.12"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "bmp"] }
md5 = "0.7.0"
percent-encoding = "2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "multipart", "native-tls"] }
screenshots = "0.8.10"
sha2 = "0.10"
softbuffer = "0.4"
winit = { version = "0.30", features = ["rwh_06"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri = { version = "2.1.1", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2-app-kit = { version = "0.2.2", features = ["NSWindow", "NSEvent"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[features]
default = []

# Speed up screenshot capture and image processing in debug builds.
# BitBlt drops from ~473ms to ~50-100ms with opt-level=2.
[profile.dev.package.screenshots]
opt-level = 2

[profile.dev.package.image]
opt-level = 2

[profile.dev.package.softbuffer]
opt-level = 2

[profile.dev.package.winit]
opt-level = 2
